change api spec
